--- a/bible.html
+++ b/bible.html
@@ -116,7 +116,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
       <a class="chap-btn" href="bible_chapter.html#9">9장</a>
       <a class="chap-btn" href="bible_chapter.html#10">10장</a>
       <a class="chap-btn small" href="bible_chapter.html#EX">EX장</a>
-      <a class="chap-btn small" href="bible_photos.html">사진</a>
+      <a class="chap-btn small" href="bible_chapter.html#EX+">EX+장</a>
     </div>
   </section>
 </main>
