--- a/bible_chapter.html
+++ b/bible_chapter.html
@@ -168,7 +168,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
       <a class="toc-link" href="#9" data-target="9">9장</a>
       <a class="toc-link" href="#10" data-target="10">10장</a>
       <a class="toc-link" href="#EX" data-target="EX">EX장</a>
-      <a class="toc-link" href="bible_photos.html">사진</a>
+      <a class="toc-link" href="#EX+" data-target="EX+">EX+장</a>
     </nav>
   </div>
 
@@ -187,6 +187,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
     <section id="9" class="chapter"><h2>제 9장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
     <section id="10" class="chapter"><h2>제 10장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
     <section id="EX" class="chapter"><h2>EX장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="EX+" class="chapter"><h2>EX+장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
   </main>
 </div>
 
