--- a/bible_chapter.html
+++ b/bible_chapter.html
@@ -176,7 +176,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
   <main class="content" id="mainContent">
     <h1 class="page-title">자쿠드 성경 — 본문</h1>
 
-    <section id="1" class="chapter"><h2>제 1장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="1" class="chapter"><h2>제 1장 -작성자 쿠루-</h2><p>창세기 1장 1절 그린산부인과에서태어남</p></section>
     <section id="2" class="chapter"><h2>제 2장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
     <section id="3" class="chapter"><h2>제 3장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
     <section id="4" class="chapter"><h2>제 4장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
