--- a/bible_chapter.html
+++ b/bible_chapter.html
@@ -174,20 +174,45 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 
   <!-- centered content -->
   <main class="content" id="mainContent">
-    <h1 class="page-title">자쿠드 성경 — 본문</h1>
+    <h1 class="page-title">자쿠드 성경</h1>
 
-    <section id="1" class="chapter"><h2>제 1장 -작성자 쿠루-</h2><p>창세기 1장 1절 그린산부인과에서태어남</p></section>
-    <section id="2" class="chapter"><h2>제 2장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="3" class="chapter"><h2>제 3장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="4" class="chapter"><h2>제 4장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="5" class="chapter"><h2>제 5장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="6" class="chapter"><h2>제 6장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="7" class="chapter"><h2>제 7장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="8" class="chapter"><h2>제 8장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="9" class="chapter"><h2>제 9장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="10" class="chapter"><h2>제 10장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="EX" class="chapter"><h2>EX장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
-    <section id="EX+" class="chapter"><h2>EX+장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="1" class="chapter"><h2>제 1장</h2>
+      <p>창세기 1장 1절 그린산부인과에서태어남</p>
+      <p>글쓴이 쿠루</p>
+    </section>
+    <section id="2" class="chapter"><h2>제 2장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="3" class="chapter"><h2>제 3장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="4" class="chapter"><h2>제 4장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="5" class="chapter"><h2>제 5장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="6" class="chapter"><h2>제 6장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="7" class="chapter"><h2>제 7장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="8" class="chapter"><h2>제 8장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="9" class="chapter"><h2>제 9장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="10" class="chapter"><h2>제 10장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id="EX" class="chapter"><h2>제 EX장</h2>
+      <p>ㅇㅇ</p>
+    </section>
+    <section id=EX+" class="chapter"><h2>제 EX+장</h2>
+      <p>ㅇㅇ</p>
+    </section>
   </main>
 </div>
 
