--- a/bible_chapter.html
+++ b/bible_chapter.html
@@ -178,6 +178,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 
     <section id="1" class="chapter"><h2>제 1장</h2>
       <p>창세기 1장 1절 그린산부인과에서태어남</p>
+      <p>창세기 1장 1절 DJ 욧닭이 원소를 창조함</p>
       <p>글쓴이 쿠루</p>
     </section>
     <section id="2" class="chapter"><h2>제 2장</h2>
